openshift/api-service-deployment.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: api-service
spec:
  template:
    metadata:
      labels:
        name: api-service
    spec:
      containers:
      - env:
        - name: source_service
          value: http://source-service:8080/source-service-1.0-SNAPSHOT
        name: api-service
        image: api-service-image
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /api-service-1.0-SNAPSHOT/api/ready
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 1
        livenessProbe:
          httpGet:
            path: /api-service-1.0-SNAPSHOT/api/live
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 1
      restartPolicy: OnFailure
  replicas: 1
  selector:
    name: api-service
  strategy:
    type: Rolling
  triggers:
  - type: ImageChange
    imageChangeParams:
      automatic: true
      containerNames:
      - api-service
      from:
        kind: ImageStreamTag
        name: api-service-image:latest
  - type: ConfigChange
