openshift/source-service-deployment.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: source-service
spec:
  template:
    metadata:
      labels:
        name: source-service
    spec:
      containers:
      - name: source-service
        image: source-service-image
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          httpGet:
            path: source-service-1.0-SNAPSHOT/api/ready
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 1
        livenessProbe:
          httpGet:
            path: source-service-1.0-SNAPSHOT/api/live
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 1
      restartPolicy: Always
  replicas: 2
  selector:
    name: source-service
  strategy:
    type: Rolling
  triggers:
  - type: ImageChange
    imageChangeParams:
      automatic: true
      containerNames:
      - source-service
      from:
        kind: ImageStreamTag
        name: source-service-image:latest
  - type: ConfigChange
