openshift/api-service-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: api-service
  name: api-service
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: api-service
