openshift/api-service-route.yml
apiVersion: v1
kind: Route
metadata:
  name: api-service
spec:
  path: /api-service-1.0-SNAPSHOT
  to:
    kind: Service
    name: api-service
